change package references to entry and type files

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "src/*.js",
     "src/*.d.ts"
   ],
-  "main": "src/es-cookie.js",
-  "types": "./src/es-cookie.d.ts",
+  "main": "src/index.js",
+  "types": "./src/index.d.ts",
   "keywords": [
     "cookies",
     "typescript",
