Fix a few typos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
+        "noUnusedLocals": true,
         "noImplicitAny": true,
         "strictNullChecks": true,
         "declaration": true,
