--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "webpack"
   ],
   "scripts": {
-    "prepublish": "tsc && browserify test/tests.js -o test/browser/testbundle.js",
+    "prepare": "tsc && browserify test/tests.js -o test/browser/testbundle.js",
     "start": "http-server"
   },
   "author": {
