Distribute as a native ES module instead of CommonJS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "ES6",
         "noUnusedLocals": true,
         "noImplicitAny": true,
         "strictNullChecks": true,
