--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
   "name": "es-cookie",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "A JavaScript module for handling cookies",
   "files": [
     "src/*.js",
     "src/*.d.ts"
   ],
+  "type": "module",
   "main": "src/es-cookie.js",
   "types": "./src/es-cookie.d.ts",
   "keywords": [
     "cookies",
     "typescript",
-    "module",
-    "commonjs",
-    "rollup",
-    "browserify",
-    "webpack"
+    "module"
   ],
   "scripts": {
-    "prepare": "tsc && browserify test/tests.js -o test/browser/testbundle.js",
+    "prepare": "tsc",
     "start": "http-server"
   },
   "author": {
     "name": "Theodore Brown",
     "email": "theodorejb@outlook.com",
-    "url": "http://theodorejb.me/"
+    "url": "https://theodorejb.me/"
   },
   "license": "MIT",
   "homepage": "https://github.com/theodorejb/es-cookie",
@@ -36,11 +33,11 @@
     "url": "git://github.com/theodorejb/es-cookie.git"
   },
   "devDependencies": {
-    "@types/mocha": "^5.2.0",
-    "@types/node": "^12.12.24",
-    "browserify": "^16.2.2",
-    "http-server": "^0.12.1",
-    "mocha": "^7.0.0",
-    "typescript": "^3.7.4"
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "chai": "^4.3.6",
+    "http-server": "^14.1.1",
+    "mocha": "^10.0.0",
+    "typescript": "^4.7.4"
   }
 }
