Disable http-server cache

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "prepare": "tsc",
-    "start": "http-server"
+    "start": "http-server -c-1"
   },
   "author": {
     "name": "Theodore Brown",
